--- a/AspNetCoreWebApplication/Views/Home/Index.cshtml
+++ b/AspNetCoreWebApplication/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 <a class="twitter-link" href="http://twitter.com/home/?status=I just hosted a website on AWS Nevio!"><img src="img/tweet.svg" /></a>
 <div class="text">
-    <h1>Congratulations Nevio!</h1>
+    <h1>Congratulations Nevio Frende!</h1>
     <h2>@ViewData["Message"]</h2>
 </div>
